--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,21 @@
  p{
     font-size: 23px;
     font-style:normal;
+    font-weight: bolder;
     margin-top: 10px;
     color: rgb(81, 174, 174);
-    background-color: black;
+    
+    /* background-color: black; */
    width:fit-content;
      padding: 10px;
      strong{
      font-size: 23px;
     font-style:normal;
+    font-weight: bolder;
     margin-top: 10px;
     color: rgb(81, 174, 174);
     /* color: rgb(222, 215, 215); */
-    background-color: black;
+    /* background-color: black; */
    width:fit-content;
      padding: 10px;
 }
@@ -35,7 +38,8 @@
 /* } */
 ul{
     margin-left: 20px;
-    color:rgb(172, 187, 201);
+    /* color:rgb(172, 187, 201); */
+    color: black;
     list-style-type: decimal;
      
 }
